force-app/main/default/objects/PS_STDNT_TEST_COMP__x/PS_STDNT_TEST_COMP__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1f1b3syz-JbkXfTWqnLS3XTB3Hl74nSTRCVQPvoQCIOY/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_STDNT_TEST_COMPs</externalName>
    <label>Test Score (external)</label>
    <pluralLabel>Test Score (external)</pluralLabel>
</CustomObject>