force-app/main/default/objects/PS_STDNT_TEST_COMP__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_STDNT_TEST_COMP.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Score (external)</relationshipLabel>
    <relationshipName>Test_Score_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>