force-app/main/default/objects/PS_STDNT_TEST_COMP__x/fields/SCORE__c.field-meta.xml
<CustomField>
    <fullName>SCORE__c</fullName>
    <description>Data sourced from PS_STDNT_TEST_COMP.SCORE</description>
    <externalDeveloperName>SCORE</externalDeveloperName>
    <label>Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>