force-app/main/default/objects/PS_STDNT_TEST_COMP__x/fields/TEST_COMPONENT__c.field-meta.xml
<CustomField>
    <fullName>TEST_COMPONENT__c</fullName>
    <description>Data sourced from PS_STDNT_TEST_COMP.TEST_COMPONENT</description>
    <externalDeveloperName>TEST_COMPONENT</externalDeveloperName>
    <label>Test Component</label>
    <length>10</length>
    <type>Text</type>
</CustomField>