force-app/main/default/objects/PS_STDNT_TEST_COMP__x/fields/TEST_DT__c.field-meta.xml
<CustomField>
    <fullName>TEST_DT__c</fullName>
    <description>Data sourced from PS_STDNT_TEST_COMP.TEST_DT</description>
    <externalDeveloperName>TEST_DT</externalDeveloperName>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>