force-app/main/default/objects/PS_STDNT_TEST_COMP__x/fields/TEST_ID__c.field-meta.xml
<CustomField>
    <fullName>TEST_ID__c</fullName>
    <description>Data sourced from PS_STDNT_TEST_COMP.TEST_ID</description>
    <externalDeveloperName>TEST_ID</externalDeveloperName>
    <label>Test Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>